--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Martin's Fish</title>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="./main.css">
 </head>
+
 <body>
 	<div class="header">
 		<header>
-		  <div><img src="images/logo.png" alt="Martins Aquarium"></div>
-		  <h1>A collection of exotic fish with care tips and Martin's personal favorite fish harvest locations.</h1>
+			<div><img src="./Images/logo.png" alt="Martins Aquarium"></div>
+			<h1>A collection of exotic fish with care tips and Martin's personal favorite fish harvest locations.</h1>
 		</header>
 	</div>
 	<div class="fishTank">
@@ -26,7 +28,7 @@
 					<li class="fish-details">Found: Myrtle Beach</li>
 					<li class="fish-details">Diet: Crumbs</li>
 				</ul>
-        		</article>
+			</article>
 			<article class="fish-card">
 				<div><img class="fish-image" src="images/bluefish.jpg" /></div>
 				<h3 class="fish-name">Swisher</h3>
@@ -36,7 +38,12 @@
 					<li class="fish-details">Found: Myrtle Beach</li>
 					<li class="fish-details">Diet: Crumbs</li>
 				</ul>
-        		</article>
+			</article>
+			<!-- <h2 class="side-bar">
+				<aside>
+					Martins Harvesting locations
+				</aside>
+			</h2> -->
 			<article class="fish-card">
 				<div><img class="fish-image" src="images/bluefish.jpg" /></div>
 				<h3 class="fish-name">Swisher</h3>
@@ -46,8 +53,10 @@
 					<li class="fish-details">Found: Myrtle Beach</li>
 					<li class="fish-details">Diet: Crumbs</li>
 				</ul>
-        		</article>
+			</article>
 		</section>
-	</div>	
+	</div>
+	<script type="module" src="./Js/main.js"></script>
 </body>
+
 </html>
