--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
 			<div><img src="./Images/logo.png" alt="Martins Aquarium"></div>
 			<h1>A collection of exotic fish with care tips and Martin's personal favorite fish harvest locations.</h1>
 		</header>
+		<main>
+			<div class="tipCard">
+
+			</div>
+			<div class="location">
+
+			</div>
+		</main>
 	</div>
 	<div class="fishTank">
-		<section class="fishList">
+		<section id="fishList">
 			<article class="fish-card">
 				<div><img class="fish-image" src="images/bluefish.jpg" /></div>
 				<h3 class="fish-name">Swisher</h3>
@@ -39,11 +47,7 @@
 					<li class="fish-details">Diet: Crumbs</li>
 				</ul>
 			</article>
-			<!-- <h2 class="side-bar">
-				<aside>
-					Martins Harvesting locations
-				</aside>
-			</h2> -->
+			
 			<article class="fish-card">
 				<div><img class="fish-image" src="images/bluefish.jpg" /></div>
 				<h3 class="fish-name">Swisher</h3>
@@ -52,6 +56,13 @@
 					<li class="fish-details">Length: 2 inches</li>
 					<li class="fish-details">Found: Myrtle Beach</li>
 					<li class="fish-details">Diet: Crumbs</li>
+				</ul>
+			</article>
+			<article class="tipCard">
+				<div><img class="fish-image" src="images/bluefish.jpg" /></div>
+				<h3 class="fish-name">Swisher</h3>
+				<ul>
+					<li class="tip-details">Stripped Jelly Fish</li>
 				</ul>
 			</article>
 		</section>
