Finally have tips and locations shows up on my main page

--- a/index.html
+++ b/index.html
@@ -58,15 +58,16 @@
 					<li class="fish-details">Diet: Crumbs</li>
 				</ul>
 			</article>
-			<article class="tipCard">
-				<div><img class="fish-image" src="images/bluefish.jpg" /></div>
-				<h3 class="fish-name">Swisher</h3>
-				<ul>
-					<li class="tip-details">Stripped Jelly Fish</li>
-				</ul>
-			</article>
 		</section>
 	</div>
+	<aside>
+		<section id="tips">
+			
+		</section>
+		<section id="locations">
+			
+		</section>
+	</aside>
 	<script type="module" src="./Js/main.js"></script>
 </body>
 
